[gd_scene load_steps=36 format=3 uid="uid://de2wwqhvy1if0"]

[ext_resource type="Script" path="res://scripts/Astronomer.gd" id="1_pdj4m"]
[ext_resource type="Texture2D" uid="uid://crrearrwsdqby" path="res://sprites/Animation_Sets/Human_South/Walking_South1.png" id="2_7hy3s"]
[ext_resource type="Texture2D" uid="uid://djc8h5fbbdnc2" path="res://sprites/Animation_Sets/Human_South/Walking_South2.png" id="3_1xh8f"]
[ext_resource type="Texture2D" uid="uid://bdiicjf87q6sw" path="res://sprites/Animation_Sets/Human_South/Walking_South3.png" id="4_rcefo"]
[ext_resource type="Texture2D" uid="uid://cfhtrpex1row8" path="res://sprites/Animation_Sets/Human_South/Walking_South4.png" id="5_r1lml"]
[ext_resource type="Texture2D" uid="uid://71dtaubqogjs" path="res://sprites/Animation_Sets/Human_South/Walking_South5.png" id="6_p7v5u"]
[ext_resource type="Texture2D" uid="uid://bqigqjqllbgwc" path="res://sprites/Animation_Sets/Human_South/Walking_South6.png" id="7_stjw8"]
[ext_resource type="Texture2D" uid="uid://xusvov2mjwou" path="res://sprites/Animation_Sets/Human_Idle/MC_idle1.png" id="8_7isjp"]
[ext_resource type="Texture2D" uid="uid://cyjxg45g4bbor" path="res://sprites/Animation_Sets/Human_Idle/MC_idle2.png" id="9_iqi14"]
[ext_resource type="Texture2D" uid="uid://gdxd45nkrmvg" path="res://sprites/Animation_Sets/Human_Idle/MC_idle3.png" id="10_2qy4v"]
[ext_resource type="Texture2D" uid="uid://cud1c2wgwwrgr" path="res://sprites/Animation_Sets/Human_Idle/MC_idle4.png" id="11_mvgxf"]
[ext_resource type="Texture2D" uid="uid://d0dh0ulfibb5g" path="res://sprites/Animation_Sets/Human_West/Walking_West1.png" id="12_66413"]
[ext_resource type="Texture2D" uid="uid://b7y3fbbu1mvy3" path="res://sprites/Animation_Sets/Human_West/Walking_West2.png" id="13_rtaby"]
[ext_resource type="Texture2D" uid="uid://w246ud2iolp" path="res://sprites/Animation_Sets/Human_West/Walking_West3.png" id="14_e74oi"]
[ext_resource type="Texture2D" uid="uid://dec2qlefe0xql" path="res://sprites/Animation_Sets/Human_West/Walking_West4.png" id="15_u73hl"]
[ext_resource type="Texture2D" uid="uid://c5uyy8255djgn" path="res://sprites/Animation_Sets/Human_West/Walking_West5.png" id="16_b2oui"]
[ext_resource type="Texture2D" uid="uid://bttlkpvye7l2a" path="res://sprites/Animation_Sets/Human_West/Walking_West6.png" id="17_3lpf3"]
[ext_resource type="Texture2D" uid="uid://ctq578tt4k4ye" path="res://sprites/Animation_Sets/Human_East/Walking_East1.png" id="18_0cnui"]
[ext_resource type="Texture2D" uid="uid://8vddbhkgf2sh" path="res://sprites/Animation_Sets/Human_East/Walking_East2.png" id="19_7pxnb"]
[ext_resource type="Texture2D" uid="uid://dlqyyqdhcnk8" path="res://sprites/Animation_Sets/Human_East/Walking_East3.png" id="20_3bkcf"]
[ext_resource type="Texture2D" uid="uid://bte3pcbbdmjjl" path="res://sprites/Animation_Sets/Human_East/Walking_East4.png" id="21_qulge"]
[ext_resource type="Texture2D" uid="uid://dfh1bpwfsnrc7" path="res://sprites/Animation_Sets/Human_East/Walking_East5.png" id="22_yjm72"]
[ext_resource type="Texture2D" uid="uid://crq1alq1cys6" path="res://sprites/Animation_Sets/Human_East/Walking_East6.png" id="23_c6gbk"]
[ext_resource type="Texture2D" uid="uid://b3lfksp23qegs" path="res://sprites/Animation_Sets/Human_North/Walking_North1.png" id="24_3cx06"]
[ext_resource type="Texture2D" uid="uid://cbuxbfxittdxc" path="res://sprites/Animation_Sets/Human_North/Walking_North2.png" id="25_02fhv"]
[ext_resource type="Texture2D" uid="uid://2ct22405ea7a" path="res://sprites/Animation_Sets/Human_North/Walking_North3.png" id="26_v8bo7"]
[ext_resource type="Texture2D" uid="uid://cgql7s65nv0rc" path="res://sprites/Animation_Sets/Human_North/Walking_North4.png" id="27_5j7ka"]
[ext_resource type="Texture2D" uid="uid://rk0b1ovb8jin" path="res://sprites/Animation_Sets/Human_North/Walking_North5.png" id="28_yvj0p"]
[ext_resource type="Texture2D" uid="uid://cq2ia0hru4hie" path="res://sprites/Animation_Sets/Human_North/Walking_North6.png" id="29_ix5ha"]
[ext_resource type="AudioStream" uid="uid://ceus1ju0jdk24" path="res://sounds/itempickup.mp3" id="30_1uhfr"]
[ext_resource type="AudioStream" uid="uid://d0acaevyjq2dv" path="res://sounds/footstep_human.mp3" id="31_3q7bx"]
[ext_resource type="AudioStream" uid="uid://dfyyejfjh17gi" path="res://sounds/wall hit.mp3" id="32_h5uee"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ta702"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("2_7hy3s")
}, {
"duration": 1.2,
"texture": ExtResource("3_1xh8f")
}, {
"duration": 1.2,
"texture": ExtResource("4_rcefo")
}, {
"duration": 1.5,
"texture": ExtResource("5_r1lml")
}, {
"duration": 1.2,
"texture": ExtResource("6_p7v5u")
}, {
"duration": 1.2,
"texture": ExtResource("7_stjw8")
}],
"loop": true,
"name": &"down",
"speed": 10.0
}, {
"frames": [{
"duration": 4.0,
"texture": ExtResource("8_7isjp")
}, {
"duration": 1.0,
"texture": ExtResource("9_iqi14")
}, {
"duration": 1.0,
"texture": ExtResource("10_2qy4v")
}, {
"duration": 1.0,
"texture": ExtResource("11_mvgxf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("12_66413")
}, {
"duration": 1.2,
"texture": ExtResource("13_rtaby")
}, {
"duration": 1.2,
"texture": ExtResource("14_e74oi")
}, {
"duration": 1.5,
"texture": ExtResource("15_u73hl")
}, {
"duration": 1.2,
"texture": ExtResource("16_b2oui")
}, {
"duration": 1.2,
"texture": ExtResource("17_3lpf3")
}],
"loop": true,
"name": &"left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("18_0cnui")
}, {
"duration": 1.2,
"texture": ExtResource("19_7pxnb")
}, {
"duration": 1.2,
"texture": ExtResource("20_3bkcf")
}, {
"duration": 1.5,
"texture": ExtResource("21_qulge")
}, {
"duration": 1.2,
"texture": ExtResource("22_yjm72")
}, {
"duration": 1.2,
"texture": ExtResource("23_c6gbk")
}],
"loop": true,
"name": &"right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("24_3cx06")
}, {
"duration": 1.2,
"texture": ExtResource("25_02fhv")
}, {
"duration": 1.2,
"texture": ExtResource("26_v8bo7")
}, {
"duration": 1.5,
"texture": ExtResource("27_5j7ka")
}, {
"duration": 1.2,
"texture": ExtResource("28_yvj0p")
}, {
"duration": 1.2,
"texture": ExtResource("29_ix5ha")
}],
"loop": true,
"name": &"up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gj5wx"]
size = Vector2(15, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_l66k1"]
radius = 21.0238

[node name="Astronomer" type="CharacterBody2D" node_paths=PackedStringArray("sprite") groups=["Human", "Player"]]
position = Vector2(503, 284)
script = ExtResource("1_pdj4m")
sprite = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ta702")
animation = &"up"
frame_progress = 0.849276

[node name="Collider" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 3
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_gj5wx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_l66k1")

[node name="ItemGrab" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_1uhfr")
volume_db = -19.891
pitch_scale = 0.89

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_3q7bx")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="WallBump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_h5uee")
volume_db = -21.596
pitch_scale = 0.37

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
